<resources>
    <string name="app_name">ProductDetails</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="add">Add</string>
    <string name="best_price">Best Price</string>
    <string name="product_name">Product Name</string>
    <string name="available_at">Available At</string>
    <string name="product_description">Product Description</string>
    <string name="show_less">Show Less</string>
    <string name="show_more">Show More</string>
</resources>
