<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_product_details">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color">

        <RelativeLayout
            android:id="@+id/pager_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_pager_height">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent_color" />

            <com.android.productdetails.views.pager_indicator.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                app:fillColor="@color/green"
                app:pageColor="@color/transparent_color"
                app:strokeColor="@color/grey" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/pager_layout"
            android:layout_toLeftOf="@+id/product_price_layout"
            android:orientation="vertical">

            <com.android.productdetails.views.PDTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/product_name" />

            <com.android.productdetails.views.PDTextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/product_name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_price_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/pager_layout"
            android:orientation="vertical">

            <com.android.productdetails.views.PDTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:text="@string/best_price" />

            <com.android.productdetails.views.PDTextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:text="@string/product_name"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_layout"
        android:background="@color/light_grey"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner_white_bg"
                android:orientation="vertical">

                <com.android.productdetails.views.PDTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/product_description"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />

                <com.android.productdetails.views.PDTextView
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/product_description" />

                <com.android.productdetails.views.PDTextView
                    android:id="@+id/show_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_grey_bg"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/show_more"
                    android:textColor="@color/green"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.android.productdetails.views.PDTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner_white_bg"
                android:padding="5dp"
                android:text="@string/available_at"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
